Bug 68779 - FILEOPEN RTF Table borders missing
Summary: FILEOPEN RTF Table borders missing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other Windows (All)
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: BSA target:4.3.0 target:4.2.3 target:...
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2013-08-31 07:12 UTC by wadim
Modified: 2015-12-17 12:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
RTF document (5.93 KB, application/rtf)
2013-08-31 07:12 UTC, wadim
Details
another file where it can be reproducible (65.68 KB, application/msword)
2014-02-24 15:37 UTC, Xisco Faulí
Details
attachment-24779-0.html (3.11 KB, text/html)
2014-03-14 10:45 UTC, wadim
Details
attachment-24779-1.dat (1 bytes, multipart/alternative)
2014-03-14 10:45 UTC, wadim
Details
tranport.rtf (5.93 KB, application/rtf)
2014-03-14 10:45 UTC, wadim
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wadim 2013-08-31 07:12:02 UTC
Created attachment 84949 [details]
RTF document

При открытии документа рамки в таблицах отображаются бледно и НЕ печатаются   - приходится заново назначать рамки в каждой таблице  в OpenOffiсeOrg  & Microsoft Word рамки в таблицах отображаются и печатаются нормально!
Как это у Вас можно исправить? Документ формируется программой автоматически. 

              
Можно ли ставить OpenOffiсeOrg  параллельно с Вашим офисом? Для работы  документами RTF-fomat?

Operating System: Windows XP
Version: 4.1.1.2 rc
Comment 1 Thomas van der Meulen [retired] 2013-08-31 09:59:18 UTC
Hello Wadim, could you please translate your bug to English so we can understand what you are saying? Thank you in advance.

Set to invalid because it isn't written in English.
If you have translated it to English you can set the bug back to unconfirmed.
Comment 2 Urmas 2013-08-31 17:08:36 UTC
The table grid is missing from the attached document.
Comment 3 wadim 2013-09-02 03:39:57 UTC
When opening the document of a frame in tables are displayed faintly and aren't printed - it is necessary to appoint anew a framework in each table in frame OpenOfficeOrg & Microsoft Word in tables are displayed and printed normally!
How it at you can be corrected?  The document is formed by the program automatically. 


Whether it is possible to put OpenOfficeOrg in parallel with your office? For work as the documents RTF-fomat?
Comment 4 wadim 2013-09-02 03:44:31 UTC
In the enclosed document there is a grid of tables. Everything in OpenOfficeOrg opens and printed normally - I therefore provided a sample.
Comment 5 wadim 2013-09-02 03:49:18 UTC
The bank sends reports in the XLS format them opens only LibreOffice, and reports in the RTF format are formed by my program. While there was OpenOfficeOrg of problems wasn't. Reports in the RTF format are formed more than 5 years and everything was normal!
Comment 6 Xisco Faulí 2014-02-24 15:36:29 UTC
This issue is fixed in
   - Libreoffice 4.1.4.2 Build  ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
   - Libreoffice 4.2.1.1 Build  ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b

but present in
   - Libreoffice 4.3.0.0.alpha0 ID: f839b5dd16c05c0eda21345ec36ec0cb024eb732

mark as a regression and bibisectrequest
Comment 7 Xisco Faulí 2014-02-24 15:37:50 UTC
Created attachment 94663 [details]
another file where it can be reproducible
Comment 8 Xisco Faulí 2014-02-24 16:04:58 UTC
@vmiklos, could you take it?
Comment 9 Michael Stahl 2014-03-13 17:54:52 UTC
Comment on attachment 94663 [details]
another file where it can be reproducible

it is a complete mystery to me what a .DOC document that does not contain a single table has to do with a bug titled "RTF Table borders missing".
please file a separate bug for that.
Comment 10 Michael Stahl 2014-03-13 18:12:14 UTC
apparently there's no version of the new RTF filter that could import the table borders in the attachment.
Comment 11 wadim 2014-03-14 10:45:34 UTC
Created attachment 95795 [details]
attachment-24779-0.html

13.03.2014 21:12, bugzilla-daemon@freedesktop.org пишет:
> Michael Stahl <mailto:mstahl@redhat.com> changed bug 68779 
> <https://bugs.freedesktop.org/show_bug.cgi?id=68779>
> What 	Removed 	Added
> Whiteboard 	BSA bibisectrequest 	BSA rtf_filter
> CC 		mstahl@redhat.com
> Version 	4.3.0.0.alpha0+ Master 	3.5.0 release
>
> *Comment # 10 <https://bugs.freedesktop.org/show_bug.cgi?id=68779#c10> 
> on bug 68779 <https://bugs.freedesktop.org/show_bug.cgi?id=68779> from 
> Michael Stahl <mailto:mstahl@redhat.com> *
> apparently there's no version of the new RTF filter that could import the table
> borders in the attachment.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
NOT !!
Comment 12 wadim 2014-03-14 10:45:34 UTC
Created attachment 95796 [details]
attachment-24779-1.dat
Comment 13 wadim 2014-03-14 10:45:34 UTC
Created attachment 95797 [details]
tranport.rtf
Comment 14 Commit Notification 2014-03-14 18:20:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=84f4de3b65cd0f861e80c69b773004f28f9f8d9f

fdo#68779: RTF import: set borders without explicit width



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Michael Stahl 2014-03-14 18:26:00 UTC
problem was the document does not specify the border width;
Word uses default 0.75 for it.
Comment 16 Commit Notification 2014-03-14 20:29:18 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93f8e87dc7f488bbbfd8a748e47ce53936824391&h=libreoffice-4-2

fdo#68779: RTF import: set borders without explicit width


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2014-03-14 20:43:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3d180f2cdb6a8e4c40b912b4091623e94971a628&h=libreoffice-4-1

fdo#68779: RTF import: set borders without explicit width


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 wadim 2014-03-19 09:15:24 UTC
14.03.2014 21:26, bugzilla-daemon@freedesktop.org пишет:
> problem was the document does not specify the border width;
> Word uses default 0.75 for it.
In word and OpenOfficeOrg everything is normally displayed, the library 
forming the document to me isn't available on adjustment. You can make 
as in word?

was the document does not specify the border width;
Word uses default 0.75 for it.
Comment 19 wadim 2014-03-19 09:23:45 UTC
Last week everything downloaded from the official site version 4.2.2.1 
on the old! Where to take fresher version?

14.03.2014 23:29, bugzilla-daemon@freedesktop.org пишет:
> Commit Notification <mailto:libreoffice-commits@lists.freedesktop.org> 
> changed bug 68779 <https://bugs.freedesktop.org/show_bug.cgi?id=68779>
> What 	Removed 	Added
> Whiteboard 	BSA rtf_filter target:4.3.0 	BSA rtf_filter target:4.3.0 
> target:4.2.4
>
> *Comment # 16 <https://bugs.freedesktop.org/show_bug.cgi?id=68779#c16> 
> on bug 68779 <https://bugs.freedesktop.org/show_bug.cgi?id=68779> from 
> Commit Notification <mailto:libreoffice-commits@lists.freedesktop.org> *
> Michael Stahl committed a patch related to this issue.
> It has been pushed to "libreoffice-4-2":
>
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=93f8e87dc7f488bbbfd8a748e47ce53936824391&h=libreoffice-4-2
>
> fdo#68779: RTF import: set borders without explicit width
>
>
> It will be available in LibreOffice 4.2.4.
>
> The patch should be included in the daily builds available at
> http://dev-builds.libreoffice.org/daily/  in the next 24-48 hours. More
> information about daily builds can be found at:
> http://wiki.documentfoundation.org/Testing_Daily_Builds
> Affected users are encouraged to test the fix and report feedback.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 20 Commit Notification 2014-03-21 11:26:17 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-2-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=baac2e214ff41b18e33ad5d4e054d765ddb2b3d6&h=libreoffice-4-2-3

fdo#68779: RTF import: set borders without explicit width


It will be available already in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 Robinson Tryon (qubit) 2015-12-17 12:23:01 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]