fdo#68779: RTF import: set borders without explicit width

Word reportedly uses 0.75pt as a default if \brdrw is missing.

(cherry picked from commit 84f4de3b65cd0f861e80c69b773004f28f9f8d9f)

Conflicts:
	sw/qa/extras/rtfimport/rtfimport.cxx

Change-Id: I263c56f756c65ff6bb30870aa70806564d5826a6
Reviewed-on: https://gerrit.libreoffice.org/8595
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>